Style Call-to-action & fix gap
Fix gap (margin?) around divs by adding -margin to the body

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
 body {
-    background-color: #1F2937;
+    background-color: white;
     font-family: Roboto, sans-serif;
+    margin: 0 -10px;
 }
 
+.header-elements, .top-content {
+    background-color: #1F2937;
+}
 
 #hero-main {
     font-size: 48px;
@@ -139,8 +143,9 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 350px;
     margin: 100px;
+    color: white;
 }
 
 .call-to-action-left {
